--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
+    "daisyui": "^2.52.0",
+    "dotenv": "^16.1.4",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "file-saver": "^2.0.5",
+    "next": "13.4.4",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-lorem-ipsum": "^1.4.10",
     "tailwindcss": "3.3.2"
   }
 }
+
