--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "file-saver": "^2.0.5",
+    "mongoose": "^8.6.0",
     "next": "13.4.4",
     "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
@@ -25,4 +26,3 @@
     "tailwindcss": "3.3.2"
   }
 }
-
